# Gateway

./: CMakeLists.txt  LICENSE.md  README.md
include/: backend.h  discovery.h  gateway.h  mempool.h  message.h  queue.h  thread.h  utils.h  websocket.h
src/: backend.c  discovery.c  gateway.c  main.c  mempool.c  queue.c  thread.c  utils.c  websocket.c
